--- a/content/project/Hazing Project/Project 1 Md.Rmd
+++ b/content/project/Hazing Project/Project 1 Md.Rmd
@@ -20,14 +20,24 @@ editor_options:
 shiny: true
 ---
 
+# **Overview**
+
+## **Background**
+
+## **Research Questions**
+
+## **Methods**
+
+### Survey
+Download the survey [here.](/media/Experimental Hazing Survey Using Vignettes.pdf)
+
+
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, warning = TRUE, message = TRUE, fig.show = TRUE, cache = FALSE)
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE, fig.show = TRUE)
 ```
 
 
 
-
-## Data Prep and Cleaning
 
 ```{r Preparation and Cleaning, include =  FALSE}
 library(tidyverse)
@@ -85,13 +95,14 @@ eightColors <- c("#5b0909", "#5f0720","#571b43", "#4c2651",
                  "#34457c", "#00558d","#008a9e","#0fb040")
 
 
+gtx <- "white"
 ```
 
 
-## Theme Setup
+
 
 ```{r Theme, include = FALSE}
-theme_update(text = element_text(family = "Rockwell", color = "white"),
+mytheme <- theme(text = element_text(family = "Rockwell", color = "white"),
         plot.title = element_text(size = 15, face = "bold"),
         plot.title.position = "plot",
         axis.text.x = element_text(color = "white"),
@@ -106,11 +117,13 @@ theme_update(text = element_text(family = "Rockwell", color = "white"),
         legend.background = element_rect(fill = "#353635"),
         plot.margin = unit(c(0.5, 0.5, 0.5, 0.5), units = "cm"))
 
+theme_set(mytheme)
+
 ```
 
 
 
-## Sample Characteristics Plots
+## Sample Characteristics 
 
 ```{r}
 ggplot(HazingSurveyData, aes(Gender, fill = BinRace)) +
@@ -131,7 +144,7 @@ ggplot(HazingSurveyData, aes(ClassLvl, fill = fct_rev(ClassLvl))) +
   scale_fill_manual(values = fiveColors) +
   coord_flip() +
   labs(title = "Sample Characteristics: Class Level", x = NULL, y = NULL) +
-  geom_text(aes(label = ..count..), stat = "count", hjust = -0.8) +
+  geom_text(aes(label = ..count..), stat = "count", hjust = -0.8, color = gtx) +
   theme(plot.margin = margin(1, 1, 1, 1, "cm"),
         panel.grid.major.y = element_line(linetype = "dotted")) +
   ylim(0, 200)
@@ -152,18 +165,18 @@ ggplot(HazingSurveyData, aes(fct_rev(fct_infreq(Major)), fill = Major)) +
   labs(title = "Sample Characteristics: Area of Study",
        x = NULL,
        y = NULL) +
-  geom_text(aes(label = ..count..), stat = "count", hjust = -1) +
+  geom_text(aes(label = ..count..), stat = "count", hjust = -1, color = gtx) +
   theme(plot.margin = margin(1, 1, 1, 1, "cm"),
         panel.grid.major.y = element_line(linetype = "dotted")) +
   ylim(0, 200)
 ```
 
-## Determination of Guilt and Punishment Plots
+## Determination of Guilt and Punishment 
 
 ```{r Determination of Guilt}
 ggplot(HazingSurveyData, aes(GltyofHazing, fill = GltyofHazing)) +
   geom_bar(show.legend = FALSE) +
-  geom_text(aes(label = ..count..), stat = "count", vjust = -1) +
+  geom_text(aes(label = ..count..), stat = "count", vjust = -1, color = gtx) +
   ggtitle("Determination of Guilt") +
   ylim(0, 700) +
   scale_fill_manual(values = c("#350e3d", "#555a6f","#0fb040")) +
@@ -174,7 +187,7 @@ ggplot(HazingSurveyData, aes(GltyofHazing, fill = GltyofHazing)) +
 
 ggplot(HazingSurveyData, aes(GltyofHazing, fill = GltyofHazing)) +
   geom_bar(show.legend = FALSE) +
-  geom_text(aes(label = ..count..), stat = "count", vjust = -1) +
+  geom_text(aes(label = ..count..), stat = "count", vjust = -1, color = gtx) +
   ggtitle("Determination of Guilt") +
   ylim(0, 700) +
   scale_fill_manual(values = c("#350e3d", "#555a6f","#0fb040")) +
@@ -187,7 +200,7 @@ ggplot(HazingSurveyData, aes(GltyofHazing, fill = GltyofHazing)) +
 ```{r}
 ggplot(HazingSurveyData, aes(fct_infreq(Punishment), fill = Punishment)) +
   geom_bar(show.legend = FALSE) +
-  geom_text(aes(label = ..count..), stat = "count", hjust = -1) +
+  geom_text(aes(label = ..count..), stat = "count", hjust = -1, color = gtx) +
   labs(x = NULL, y = NULL, title = "What Punishment should they receive?") +
   coord_flip() +
   theme(plot.margin = margin(1, 0.5, 1, 0.5, "cm")) +
@@ -197,7 +210,7 @@ ggplot(HazingSurveyData, aes(fct_infreq(Punishment), fill = Punishment)) +
 
 ggplot(HazingSurveyData, aes(fct_infreq(Punishment), fill = Punishment)) +
   geom_bar(show.legend = FALSE) +
-  geom_text(aes(label = ..count..), stat = "count", hjust = -1) +
+  geom_text(aes(label = ..count..), stat = "count", hjust = -1, color = gtx) +
   labs(x = NULL, y = NULL, title = "What Punishment should they receive?") +
   coord_flip() +
   theme(plot.margin = margin(1, 0.5, 1, 0.5, "cm")) +
@@ -207,7 +220,7 @@ ggplot(HazingSurveyData, aes(fct_infreq(Punishment), fill = Punishment)) +
 ```
 
 
-## General Views about Hazing Plots
+## General Views about Hazing 
 
 ```{r Likerts, fig.height=8, fig.width=8, message=FALSE, warning=FALSE}
 
@@ -222,7 +235,7 @@ plot(likert(Likertdf), col = fiveColors) +
         legend.key.height = unit(0.5, "cm"),
         plot.margin = margin(1, 1, 1, 0, "cm"),
         legend.text = element_text(size = 8),
-        plot.title = element_text(size = 15, hjust = 0.1),
+        plot.title = element_text(size = 15, hjust = 0.1, color = gtx),
         legend.background = element_blank(),
         panel.grid.major.y = element_line(linetype = "dotted")) +
   guides(fill = guide_legend(label.position = "bottom")) 
@@ -236,7 +249,7 @@ likert.heat.plot(likert(Likertdf), low.color = "purple", high.color = "yellow") 
         legend.key.height = unit(0.5, "cm"),
         plot.margin = margin(1, 0.5, 1, 0, "cm"),
         legend.text = element_text(size = 8),
-        plot.title = element_text(size = 15, hjust = 0.1),
+        plot.title = element_text(size = 15, hjust = 0.1, color = gtx),
         legend.background = element_blank(),
         legend.position = "top",
         legend.direction = "horizontal") +
@@ -260,7 +273,7 @@ likert.heat.plot(likert(Likertdf), low.color = "purple", high.color = "yellow") 
 * There are no benefits to hazing new group members.
 
 
-### Selecting Appriorate Variables
+
 ```{r Hazing Score Components}
 
 Likertdf3 <- Likertdf[, -c(2,3,4,10,11,13,15)]
@@ -268,7 +281,6 @@ Likertdf3 <- Likertdf[, -c(2,3,4,10,11,13,15)]
 colnames(Likertdf3)
 ```
 
-### Generating the Score
 
 ```{r}
 
@@ -297,7 +309,7 @@ HazingSurveyData$Score <- LikertdfScore$HazeScore
 ```
 
 
-### Hazing Score Plot
+### Hazing Score 
 
 ```{r}
 ggplot(HazingSurveyData, aes(Score)) +
@@ -323,20 +335,9 @@ ggline(HazingSurveyData, x = "BinGlty", y = "Score",
     point.color = "red",
     point.size = 1,
     color = "black",
-    add.params = list(alpha = 0.5))
+    add.params = list(alpha = 0.5),
+    ggtheme = mytheme)
 
-      ggline(HazingSurveyData, x = "Gender", y = "Score", 
-             add = c("mean_se", "jitter"), 
-             order = c("Male", "Female"),
-             ylab = "Hazing Score",
-             xlab = "",
-             title = "Hazing Score by Gender",
-             point.color = "red",
-             point.size = 1,
-             color = "black",
-             add.params = list(alpha = 0.5))
-
-      
 hg <- HazingSurveyData %>% 
         group_by(BinGlty) %>%
         rename("Guilty?" = "BinGlty") %>% 
@@ -354,6 +355,45 @@ hg <- HazingSurveyData %>%
                   p.value = shapiro.test(Score)$p.value)
 
 kable(hg)
+
+ggplot(HazingSurveyData, aes(sample = Score, fill = BinGlty)) +
+        stat_qq_band(alpha=0.5, conf=0.95, qtype=1, bandType = "boot") +
+        stat_qq_line(identity = TRUE) +
+        stat_qq_point(col = "black") +
+        facet_wrap(~ BinGlty, scales = "free") +
+        labs(x = "Theoretical Quantiles", y = "Sample Quantiles") +
+        theme(legend.position = "none") +
+        scale_fill_manual(values = c("#5b0909", "#0fb040"))
+      
+
+hg2 <- tidy(wilcox.test(Score ~ BinGlty, HazingSurveyData, na.rm = TRUE, 
+                       paired = FALSE, exact = FALSE, conf.int = TRUE)) 
+ 
+kable(hg2) 
+      
+
+```
+
+
+
+```{r}
+
+
+
+ggline(HazingSurveyData, x = "Gender", y = "Score", 
+      add = c("mean_se", "jitter"), 
+      order = c("Male", "Female"),
+             ylab = "Hazing Score",
+             xlab = "",
+             title = "Hazing Score by Gender",
+             point.color = "red",
+             point.size = 1,
+             color = "black",
+             add.params = list(alpha = 0.5),
+      ggtheme = mytheme)
+
+      
+
    
       
 hg1 <- HazingSurveyData %>%
@@ -374,17 +414,7 @@ hg1 <- HazingSurveyData %>%
 kable(hg1)
       
   
-      ggplot(HazingSurveyData, aes(sample = Score, fill = BinGlty)) +
-        stat_qq_band(alpha=0.5, conf=0.95, qtype=1, bandType = "boot") +
-        stat_qq_line(identity = TRUE) +
-        stat_qq_point(col = "black") +
-        facet_wrap(~ BinGlty, scales = "free") +
-        labs(x = "Theoretical Quantiles", y = "Sample Quantiles") +
-        theme(legend.position = "none") +
-        scale_fill_manual(values = c("#5b0909", "#0fb040"))
-      
-
-      
+    
       ggplot(HazingSurveyData, aes(sample = Score, fill = Gender)) +
         stat_qq_band(alpha=0.5, conf=0.95, qtype=1, bandType = "boot") +
         stat_qq_line(identity = TRUE) +
@@ -397,10 +427,7 @@ kable(hg1)
 
   
 
-hg2 <- tidy(wilcox.test(Score ~ BinGlty, HazingSurveyData, na.rm = TRUE, 
-                       paired = FALSE, exact = FALSE, conf.int = TRUE)) 
- 
-kable(hg2) 
+
       
 hg3 <- tidy(wilcox.test(Score ~ Gender, HazingSurveyData, na.rm = TRUE, 
                        paired = FALSE, exact = FALSE, conf.int = TRUE)) 
