--- a/content/project/1984-Text-Analysis/EDP 693e 1984 Text Markdown.Rmd
+++ b/content/project/1984-Text-Analysis/EDP 693e 1984 Text Markdown.Rmd
@@ -4,22 +4,21 @@ author: "C. Jackson"
 date: "March 16, 2021"
 summary: A Text analysis of 1984 by George Orwell.
 linktitle: "1984 Text Analysis"
-
 output:
   blogdown::html_page:
-    toc: true
     
+    toc: true
 menu:
   docs:
+    
+    
     parent: "Projects"
     weight: 2
-    
-    
 type: docs
 tag:
   - Orwell
 editor_options: 
-  chunk_output_type: console
+  chunk_output_type: inline
 shiny: true
 ---
 
@@ -36,7 +35,7 @@ library(biclust)
 library(igraph)
 library(fpc)
 library(Rcampdf)
-library(wordcloud)
+library(wordcloud2)
 library(tidytext)
 library(flextable)
 library(glue)
@@ -46,7 +45,7 @@ library(readr)
 library(knitr)
 library(ggthemes)
 library(extrafont)
-
+library(ggwordcloud)
 
 chapter.labs <- c("Chapter 1", "Chapter 2", "Chapter 3")
 names(chapter.labs) <- c(1, 2, 3)
@@ -60,7 +59,7 @@ get_sentiments("afinn")
 
 
 ```{r Theme, include = FALSE}
-theme_update(text = element_text(family = "Rockwell", color = "white"),
+mytheme <- theme(text = element_text(family = "Rockwell", color = "white"),
         plot.title = element_text(size = 15, face = "bold"),
         plot.title.position = "plot",
         axis.text.x = element_text(color = "white"),
@@ -72,9 +71,13 @@ theme_update(text = element_text(family = "Rockwell", color = "white"),
         panel.grid.major.x = element_blank(),
         panel.grid.minor = element_blank(),
         panel.grid.major = element_blank(),
+        strip.background = element_rect(fill = "#353635", color = "#353635"),
+        strip.text = element_text(color = "white"),
         legend.background = element_rect(fill = "#353635"),
         plot.margin = unit(c(0.5, 0.5, 0.5, 0.5), units = "cm"))
 
+
+theme_set(mytheme)
 
 threeColors <- c("#5b0909", "#34457c", "#0fb040")
 
@@ -101,7 +104,7 @@ gtx <- "white"
 ```
 
 
-## Importing the text by Chapter
+
 ```{r By Chapter}
 
 Ch1 <- read_file("1984 Orwell Chapter 1.txt")
@@ -111,14 +114,14 @@ Ch2 <- read_file("1984 Orwell Chapter 2.txt")
 Ch3 <- read_file("1984 Orwell Chapter 3.txt")
 
 ```
-## Importing the whole text
+
 ```{r The Whole Text}
 Text1984 <- read_file("1984 Orwell text.txt")
 Text1984 <- gsub("\\$", "", Text1984)
 
 ```
 
-## Tidying data
+
 ```{r Tidy Chapters, include = FALSE}
 
 Ch1 <- gsub("\\$", "", Ch1)
@@ -208,13 +211,17 @@ tidy_tokens_1984 %>%
   labs(y = NULL, title = "Words Used more than 100 Times",
        x = "Word Count", fill = "Count") +
   scale_fill_viridis() +
-  geom_text(aes(label = n), hjust = -0.15)
+  geom_text(aes(label = n), hjust = -0.15, color = gtx)
 
 
-tidy_tokens_1984 %>%
+worddf <- tidy_tokens_1984 %>%
   anti_join(stop_words) %>%
-  count(word) %>%
-  with(wordcloud(word, n, max.words = 100, scale = c(3, 0.1)))
+  count(word) %>% 
+  data.frame()
+
+worddf2 <- subset(worddf, n > 50)
+  
+wordcloud2(worddf2, backgroundColor = "#353635")
 
 ```
 
@@ -242,35 +249,56 @@ tidy_tokens_1984 %>%
                    max.words = 30, title.size = 2.5, title.bg.colors = NA,
                    title.colors = "skyblue")
 
+tidy_tokens_1984 %>%
+  inner_join(get_sentiments("bing")) %>%
+  count(word, sentiment, sort = TRUE) %>%
+  ggplot(aes(label = word, size = n,
+             color = sentiment)) +
+  geom_text_wordcloud_area() +
+  scale_size_area(max_size = 8) +
+  facet_wrap(~sentiment) +
+  scale_color_manual(values = c("coral", "skyblue")) +
+  labs(title = "Bing Analysis of Words in 1984")
+
 
 ```
 
 ### Bing Analysis
 ```{r Bing by Chapter, warning = FALSE}
+
 TidyCh1 %>%
   inner_join(get_sentiments("bing")) %>%
   count(word, sentiment, sort = TRUE) %>%
-  acast(word ~ sentiment, value.var = "n", fill = 0) %>%
-  comparison.cloud(scale = c(3, 0.1), colors = c("grey20", "coral"),
-                   max.words = 50, title.size = 1.5, title.bg.colors = NA,
-                   title.colors = "skyblue")
+  ggplot(aes(label = word, size = n,
+             color = sentiment)) +
+  geom_text_wordcloud_area() +
+  scale_size_area(max_size = 8) +
+  facet_wrap(~sentiment) +
+  scale_color_manual(values = c("coral", "skyblue")) +
+  labs(title = "Bing Analysis of Words in Chapter 1")
 
 TidyCh2 %>%
   inner_join(get_sentiments("bing")) %>%
   count(word, sentiment, sort = TRUE) %>%
-  acast(word ~ sentiment, value.var = "n", fill = 0) %>%
-  comparison.cloud(scale = c(3, 0.1), colors = c("grey20", "coral"),
-                   max.words = 30, title.size = 1.5, title.bg.colors = NA,
-                   title.colors = "skyblue")
+  ggplot(aes(label = word, size = n,
+             color = sentiment)) +
+  geom_text_wordcloud_area() +
+  scale_size_area(max_size = 8) +
+  facet_wrap(~sentiment) +
+  scale_color_manual(values = c("coral", "skyblue")) +
+  labs(title = "Bing Analysis of Words in Chapter 2")
+
 
 TidyCh3 %>%
   inner_join(get_sentiments("bing")) %>%
   count(word, sentiment, sort = TRUE) %>%
-  acast(word ~ sentiment, value.var = "n", fill = 0) %>%
-  comparison.cloud(scale = c(3, 0.1), colors = c("grey20", "coral"),
-                   max.words = 30, title.size = 1.5, title.bg.colors = NA,
-                   title.colors = "skyblue")
-
+  ggplot(aes(label = word, size = n,
+             color = sentiment)) +
+  geom_text_wordcloud_area() +
+  scale_size_area(max_size = 8) +
+  facet_wrap(~sentiment) +
+  scale_color_manual(values = c("coral", "skyblue")) +
+  labs(title = "Bing Analysis of Words in Chapter 3")
 
 
 
@@ -288,11 +316,12 @@ TidyBook %>%
   mutate(sentiment = positive - negative,
          chapter = factor(chapter, levels = c(1, 2, 3))) %>%
   ggplot(aes(index, sentiment, fill = chapter)) +
-  geom_bar(alpha = 0.5, stat = "identity", show.legend = FALSE) +
+  geom_bar(stat = "identity", show.legend = FALSE) +
   facet_wrap(~ chapter, ncol = 2, scales = "free_x", 
              labeller = labeller(chapter = chapter.labs)) +
-  labs(y = "Sentiment", x = "Index", title = "Sentiment Analysis of 1984 by Chapter", 
-       subtitle = "Index = Groups of 500 words")
+  labs(y = "Sentiment", x = "Index", title = "Bing Sentiment Analysis of 1984 by Chapter", 
+       subtitle = "Index = Groups of 500 words") +
+  scale_fill_manual(values = threeColors)
 
 
 ```
@@ -319,12 +348,13 @@ NRCBook <- TidyBook %>%
   ungroup()
 
 ggplot(NRCBook, aes(n, sentiment, fill = as.factor(chapter))) +
-  geom_bar(stat = "identity", show.legend = FALSE, alpha = 0.5) +
+  geom_bar(stat = "identity", show.legend = FALSE) +
   facet_wrap(~ chapter, ncol = 2, labeller = labeller(chapter = chapter.labs), 
              scales = "free") +
   labs(x = "Count", y = "Sentiment", title = "NRC Sentiments by Chapter in 1984 by George Owell") +
   scale_y_discrete(labels = c("Anger", "Anticipation", "Disgust", "Fear", "Joy",
-                              "Negative", "Postive", "Sadness", "Surprise", "Trust"))
+                              "Negative", "Postive", "Sadness", "Surprise", "Trust")) +
+  scale_fill_manual(values = threeColors)
 
 
 ```
@@ -343,7 +373,8 @@ ggplot(bookAfinn, aes(value, n, color = as.factor(chapter))) +
   geom_jitter(show.legend = FALSE, alpha = 0.5) +
   facet_wrap(~ chapter, ncol = 2, scales = "free", labeller = labeller(chapter = chapter.labs)) +
   labs(y = "Word Count", x = "AFINN Value", 
-       title = "AFINN Value of Words by Chapter in 1984 by George Orwell")
+       title = "AFINN Value of Words by Chapter in 1984 by George Orwell") +
+  scale_fill_manual(values = threeColors)
 
 ```
 
