--- a/content/project/Hazing Project/Project 1 Md.Rmd
+++ b/content/project/Hazing Project/Project 1 Md.Rmd
@@ -114,6 +114,8 @@ mytheme <- theme(text = element_text(family = "Rockwell", color = "white"),
         panel.grid.major.x = element_blank(),
         panel.grid.minor = element_blank(),
         panel.grid.major = element_blank(),
+        strip.background = element_rect(fill = "#353635", color = "#353635"),
+        strip.text = element_text(color = "white"),
         legend.background = element_rect(fill = "#353635"),
         plot.margin = unit(c(0.5, 0.5, 0.5, 0.5), units = "cm"))
 
@@ -278,7 +280,6 @@ likert.heat.plot(likert(Likertdf), low.color = "purple", high.color = "yellow") 
 
 Likertdf3 <- Likertdf[, -c(2,3,4,10,11,13,15)]
 
-colnames(Likertdf3)
 ```
 
 
