--- a/content/Blog/visualizations/dataviz.Rmd
+++ b/content/Blog/visualizations/dataviz.Rmd
@@ -12,7 +12,7 @@ menu:
   blog:
     parent: Posts
     weight: 1
-type: docs
+type: posts
 editor_options: 
   chunk_output_type: inline
 lastmod: '2021-04-24T23:09:32-04:00'
