--- a/content/project/1984-Text-Analysis/1984-Text-Analysis-Markdown.Rmd
+++ b/content/project/1984-Text-Analysis/1984-Text-Analysis-Markdown.Rmd
@@ -30,7 +30,7 @@ shiny: true
 
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, warning = TRUE, message = FALSE)
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 ```
 
 ```{r loaded libraries, include = FALSE}
